@@ -2,6 +2,7 @@
 
 	* tryXpath/scripts/try_xpath_content.js:
 	Define removeStyleElement function.
+	Define inBlankWindow variable.
 
 2017-11-26  larissa9839  <larissa9839@gmail.com>
 
